# ansys-pyetk

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  SECURITY.md  codecov.yml  frozen.spec  index.html  pyproject.toml  robots.txt  setup.nsi  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/actions/build-linux-app/: action.yml
.github/actions/build-windows-app/: action.yml
.github/workflows/: ci-main.yml  ci-pr.yml  ci-release.yml  ci_cd.yml  label.yml
.reuse/templates/: apache_2.0_license.jinja2
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 1.dependencies.md  101.maintenance.md  102.documentation.md  104.documentation.md  105.miscellaneous.md  107.fixed.md  109.fixed.md  11.documentation.md  110.added.md  111.maintenance.md  112.maintenance.md  113.maintenance.md  115.documentation.md  116.maintenance.md  117.maintenance.md  118.documentation.md  120.maintenance.md  128.maintenance.md  13.documentation.md  130.added.md  131.fixed.md  134.added.md  136.documentation.md  14.test.md  146.fixed.md  15.test.md  150.fixed.md  152.documentation.md  153.maintenance.md  154.fixed.md  157.maintenance.md  158.fixed.md  16.test.md  161.documentation.md  163.documentation.md  164.added.md  165.added.md  167.fixed.md  169.documentation.md  170.documentation.md  (+96 more)
doc/source/: changelog.rst  conf.py  create_documentation.bat  index.rst
doc/source/api/: index.rst
doc/source/examples/: ETK_example.py  act_to_pyetk_example.rst  api_example.py  api_example_parts.py  index.rst  multi_airgap.py  ui_example.rst
doc/source/getting_started/: architecture.rst  cli.rst  dimensioning.rst  index.rst  installation.rst  terminology.rst
doc/source/toolkit/: api.rst  index.rst  ui.rst
doc/source/user_guide/: common_framework.rst  index.rst  transformer_builder.rst
doc/styles/: .gitignore
installer/: extract_version.py
installer/assets/scripts/: uninstaller_ubuntu.sh  uninstaller_yum.sh
installer/hooks/: hook-ansys.aedt.core.py  hook-ansys.aedt.toolkits.common.py  hook-ansys.aedt.toolkits.electronic_transformer.py  hook-ansys.tools.visualization_interface.py
installer/linux/debian/: ansys_pyetk_prebuild.desktop  fpm-options-debian  installer.sh  postInstallScript.sh
tests/: conftest.py
tests/backend/: conftest.py
tests/backend/json_files/: EC_wound_rectangular.json  EFD_wound_rectangular.json  EI_planar_rectangular.json  EP_planar_rectangular.json  EQ_wound_rectangular.json  ER_wound_rectangular.json  E_wound_rectangular.json  PH_wound_rectangular.json  PQ_wound_rectangular.json  PT_wound_rectangular.json  P_wound_rectangular.json  RM_planar_rectangular.json  RM_wound_circular.json  UI_wound_rectangular.json  U_wound_rectangular.json
tests/backend/old_json_files_delete/: EFD.json  EP.json  ER.json  ETD.json  P.json  PH.json  PQ.json  PT.json  UI.json  demo_EE_skinlayers.json  demo_U_skinlayers.json  demo_gap_influence.json  demo_rectangular_EC.json  demo_rectangular_EQ.json  json_new_template.json
tests/backend/tests_backend_api/: conftest.py  test_bobbin.py  test_circuit.py  test_core.py  test_material.py  test_setup_and_post_processing.py  test_whole_model.py  test_winding.py
tests/backend/tests_toolkit_rest_api/: __init__.py  conftest.py  test_rest_API.py  test_rest_api.py
tests/frontend/: __init__.py  conftest.py  test_actions.py  test_data_manager.py  test_database_manager.py  test_models.py  test_splash.py  test_units_and_scales.py  test_utils.py
tests/frontend/act_json/: demo_EC.json  demo_IEEE.json  demo_PlanarComponents.json
version/: index.html
version/0.1/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_modules/: index.html
version/0.1/_sources/: changelog.rst.txt
version/0.1/_static/: search.json
version/0.1/examples/: ETK_example.html  ETK_example.ipynb  index.html
version/0.1/getting_started/: architecture.html  index.html  installation.html
version/0.1/toolkit/: api.html  ui.html
version/0.2/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_modules/: index.html
version/0.2/_static/: search.json
version/0.2/examples/: act_to_pyetk_example.html  api_example.html  api_example.ipynb  index.html  ui_example.html
version/0.2/getting_started/: announcement.html  dimensioning.html  index.html  installation.html
version/0.2/toolkit/: api.html  index.html  ui.html
version/0.3/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.3/_modules/: index.html
version/0.3/_sources/: changelog.rst.txt  (+1 more)
version/0.4/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html
version/dev/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/: index.html  search.html  searchindex.js
(+123 files in other folders)
